[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mkosi"
authors = [
    {name = "mkosi contributors", email = "systemd-devel@lists.freedesktop.org"},
]
dynamic = ["version"]
description = "Build Bespoke OS Images"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}

[project.optional-dependencies]
bootable = [
    "pefile >= 2021.9.3",
]
dev = [
    "ruff",
    "mypy",
    "pyright",
]

[project.scripts]
mkosi = "mkosi.__main__:main"
mkosi-initrd = "mkosi.initrd:main"
mkosi-sandbox = "mkosi.sandbox:main"
mkosi-addon = "mkosi.addon:main"

[tool.setuptools]
packages = [
    "mkosi",
    "mkosi.distributions",
    "mkosi.installer",
    "mkosi.resources",
]

[tool.setuptools.package-data]
"mkosi.resources" = [
    "completion.*",
    "man/*",
    "mkosi-addon/**/*",
    "mkosi-initrd/**/*",
    "mkosi-obs/**/*",
    "mkosi-tools/**/*",
    "mkosi-vm/**/*",
    "repart/**/*",
    "tmpfiles.d/*",
]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[tool.isort]
profile = "black"
include_trailing_comma = true
multi_line_output = 3
py_version = "39"

[tool.pyright]
pythonVersion = "3.9"

[tool.mypy]
python_version = 3.9
# belonging to --strict
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_return_any = true
no_implicit_reexport = true
# extra options not in --strict
pretty = true
show_error_codes = true
show_column_numbers = true
warn_unreachable = true
strict_equality = true
scripts_are_modules = true

[tool.ruff]
target-version = "py39"
line-length = 109
lint.select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test."
]
addopts = "-m \"not integration\""
