[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mkosi"
authors = [
    {name = "mkosi contributors", email = "systemd-devel@lists.freedesktop.org"},
]
version = "26"
description = "Build Bespoke OS Images"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "LGPL-2.1-or-later"}

[project.optional-dependencies]
bootable = [
  "pefile >= 2021.9.3",
]

[project.scripts]
mkosi = "mkosi.__main__:main"
mkosi-initrd = "mkosi.initrd:main"
mkosi-sandbox = "mkosi.sandbox:main"
mkosi-addon = "mkosi.addon:main"

[tool.setuptools]
packages = [
    "mkosi",
    "mkosi.distribution",
    "mkosi.installer",
    "mkosi.resources",
]

[tool.setuptools.package-data]
"mkosi.resources" = [
    "completion.*",
    "man/*",
    "mkosi-addon/**/*",
    "mkosi-initrd/**/*",
    "mkosi-obs/**/*",
    "mkosi-tools/**/*",
    "mkosi-vm/**/*",
    "repart/**/*",
    "tmpfiles.d/*",
    "pandoc/*",
]

[tool.isort]
profile = "black"
include_trailing_comma = true
multi_line_output = 3
py_version = "39"

[tool.pyright]
pythonVersion = "3.10"
include = [
    "mkosi/**/*.py",
    "tests/**/*.py",
    "kernel-install/*.install"
]

[tool.mypy]
python_version = "3.10"
# belonging to --strict
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_return_any = true
no_implicit_reexport = true
# extra options not in --strict
pretty = true
show_error_codes = true
show_column_numbers = true
warn_unreachable = true
strict_equality = true
scripts_are_modules = true

[tool.ruff]
target-version = "py39"
line-length = 109
lint.select = [
    "E",    # pycodestyle
    "W",    # pycodestyle (trailing whitespace)
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pypgrade
    "B"     # flake8-bugbear
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["mkosi.run.nosandbox"]

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test."
]
addopts = "-m \"not integration\""
